--- a/src/style.css
+++ b/src/style.css
@@ -32,3 +32,34 @@ body {
     text-align: center;
   }
   
+
+.product-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .product {
+    width: 30%;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+  }
+  
+  .product img {
+    width: 100%;
+    border-radius: 5px;
+    margin-bottom: 10px;
+  }
+  
+  .product-details h3 {
+    margin: 0;
+    font-size: 18px;
+  }
+  
+  .product-details p {
+    margin: 5px 0;
+    font-size: 14px;
+  }
+  
